// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptionsMenu doesn't render the permissions alert on about://addons 1`] = `
<div
  className="options-menu options-menu--full"
>
  <div
    className="options-header options-menu__section"
  >
    <div>
      <img
        className="options-header__logo"
        src="/img/sourcegraph-logo.svg"
      />
      <div
        className="options-header__version"
      >
        v
        0.0.0
      </div>
    </div>
    <div
      className="options-header__right"
    >
      <button
        className="options-header__settings btn btn-icon"
        onClick={[Function]}
        type="button"
      >
        <SettingsOutlineIcon
          className="icon-inline"
        />
      </button>
      <button
        aria-checked={true}
        className="toggle"
        onClick={[Function]}
        role="switch"
        title="Toggle to disable extension"
        type="button"
        value={1}
      >
        <span
          className="toggle__bar toggle__bar--on"
        />
        <span
          className="toggle__bar-shadow toggle__bar-shadow--on"
        />
        <span
          className="toggle__knob toggle__knob--on"
        />
      </button>
    </div>
  </div>
  <form
    className="server-url-form options-menu__section"
    onSubmit={[Function]}
  >
    <label
      htmlFor="sourcegraph-url"
    >
      Sourcegraph URL
    </label>
    <div
      className="input-group"
    >
      <div
        className="input-group-prepend"
      >
        <span
          className="input-group-text"
        >
          <span>
            <span
              className="server-url-form__status-indicator bg-success"
            />
             
            <span
              className="test-connection-status"
            >
              Connected
            </span>
          </span>
        </span>
      </div>
      <input
        autoCapitalize="off"
        autoCorrect="off"
        className="form-control test-sourcegraph-url"
        id="sourcegraph-url"
        onChange={[Function]}
        spellCheck={false}
        type="text"
        value="https://sourcegraph.com"
      />
    </div>
  </form>
  <div
    className="options-menu__section"
  >
    <p>
      Learn more about privacy concerns, troubleshooting and extension features
       
      <a
        href="https://docs.sourcegraph.com/integration/browser_extension"
        target="blank"
      >
        here
      </a>
      .
    </p>
    <p>
      Search open source software at
       
      <a
        href="https://sourcegraph.com/search"
        target="blank"
      >
        sourcegraph.com/search
      </a>
      .
    </p>
  </div>
</div>
`;

exports[`OptionsMenu doesn't render the permissions alert on chrome://extensions 1`] = `
<div
  className="options-menu options-menu--full"
>
  <div
    className="options-header options-menu__section"
  >
    <div>
      <img
        className="options-header__logo"
        src="/img/sourcegraph-logo.svg"
      />
      <div
        className="options-header__version"
      >
        v
        0.0.0
      </div>
    </div>
    <div
      className="options-header__right"
    >
      <button
        className="options-header__settings btn btn-icon"
        onClick={[Function]}
        type="button"
      >
        <SettingsOutlineIcon
          className="icon-inline"
        />
      </button>
      <button
        aria-checked={true}
        className="toggle"
        onClick={[Function]}
        role="switch"
        title="Toggle to disable extension"
        type="button"
        value={1}
      >
        <span
          className="toggle__bar toggle__bar--on"
        />
        <span
          className="toggle__bar-shadow toggle__bar-shadow--on"
        />
        <span
          className="toggle__knob toggle__knob--on"
        />
      </button>
    </div>
  </div>
  <form
    className="server-url-form options-menu__section"
    onSubmit={[Function]}
  >
    <label
      htmlFor="sourcegraph-url"
    >
      Sourcegraph URL
    </label>
    <div
      className="input-group"
    >
      <div
        className="input-group-prepend"
      >
        <span
          className="input-group-text"
        >
          <span>
            <span
              className="server-url-form__status-indicator bg-success"
            />
             
            <span
              className="test-connection-status"
            >
              Connected
            </span>
          </span>
        </span>
      </div>
      <input
        autoCapitalize="off"
        autoCorrect="off"
        className="form-control test-sourcegraph-url"
        id="sourcegraph-url"
        onChange={[Function]}
        spellCheck={false}
        type="text"
        value="https://sourcegraph.com"
      />
    </div>
  </form>
  <div
    className="options-menu__section"
  >
    <p>
      Learn more about privacy concerns, troubleshooting and extension features
       
      <a
        href="https://docs.sourcegraph.com/integration/browser_extension"
        target="blank"
      >
        here
      </a>
      .
    </p>
    <p>
      Search open source software at
       
      <a
        href="https://sourcegraph.com/search"
        target="blank"
      >
        sourcegraph.com/search
      </a>
      .
    </p>
  </div>
</div>
`;

exports[`OptionsMenu doesn't render the permissions alert on chrome://newtab 1`] = `
<div
  className="options-menu options-menu--full"
>
  <div
    className="options-header options-menu__section"
  >
    <div>
      <img
        className="options-header__logo"
        src="/img/sourcegraph-logo.svg"
      />
      <div
        className="options-header__version"
      >
        v
        0.0.0
      </div>
    </div>
    <div
      className="options-header__right"
    >
      <button
        className="options-header__settings btn btn-icon"
        onClick={[Function]}
        type="button"
      >
        <SettingsOutlineIcon
          className="icon-inline"
        />
      </button>
      <button
        aria-checked={true}
        className="toggle"
        onClick={[Function]}
        role="switch"
        title="Toggle to disable extension"
        type="button"
        value={1}
      >
        <span
          className="toggle__bar toggle__bar--on"
        />
        <span
          className="toggle__bar-shadow toggle__bar-shadow--on"
        />
        <span
          className="toggle__knob toggle__knob--on"
        />
      </button>
    </div>
  </div>
  <form
    className="server-url-form options-menu__section"
    onSubmit={[Function]}
  >
    <label
      htmlFor="sourcegraph-url"
    >
      Sourcegraph URL
    </label>
    <div
      className="input-group"
    >
      <div
        className="input-group-prepend"
      >
        <span
          className="input-group-text"
        >
          <span>
            <span
              className="server-url-form__status-indicator bg-success"
            />
             
            <span
              className="test-connection-status"
            >
              Connected
            </span>
          </span>
        </span>
      </div>
      <input
        autoCapitalize="off"
        autoCorrect="off"
        className="form-control test-sourcegraph-url"
        id="sourcegraph-url"
        onChange={[Function]}
        spellCheck={false}
        type="text"
        value="https://sourcegraph.com"
      />
    </div>
  </form>
  <div
    className="options-menu__section"
  >
    <p>
      Learn more about privacy concerns, troubleshooting and extension features
       
      <a
        href="https://docs.sourcegraph.com/integration/browser_extension"
        target="blank"
      >
        here
      </a>
      .
    </p>
    <p>
      Search open source software at
       
      <a
        href="https://sourcegraph.com/search"
        target="blank"
      >
        sourcegraph.com/search
      </a>
      .
    </p>
  </div>
</div>
`;

exports[`OptionsMenu renders a default state 1`] = `
<div
  className="options-menu options-menu--full"
>
  <div
    className="options-header options-menu__section"
  >
    <div>
      <img
        className="options-header__logo"
        src="/img/sourcegraph-logo.svg"
      />
      <div
        className="options-header__version"
      >
        v
        0.0.0
      </div>
    </div>
    <div
      className="options-header__right"
    >
      <button
        className="options-header__settings btn btn-icon"
        onClick={[Function]}
        type="button"
      >
        <SettingsOutlineIcon
          className="icon-inline"
        />
      </button>
      <button
        aria-checked={true}
        className="toggle"
        onClick={[Function]}
        role="switch"
        title="Toggle to disable extension"
        type="button"
        value={1}
      >
        <span
          className="toggle__bar toggle__bar--on"
        />
        <span
          className="toggle__bar-shadow toggle__bar-shadow--on"
        />
        <span
          className="toggle__knob toggle__knob--on"
        />
      </button>
    </div>
  </div>
  <form
    className="server-url-form options-menu__section"
    onSubmit={[Function]}
  >
    <label
      htmlFor="sourcegraph-url"
    >
      Sourcegraph URL
    </label>
    <div
      className="input-group"
    >
      <div
        className="input-group-prepend"
      >
        <span
          className="input-group-text"
        >
          <span>
            <span
              className="server-url-form__status-indicator bg-success"
            />
             
            <span
              className="test-connection-status"
            >
              Connected
            </span>
          </span>
        </span>
      </div>
      <input
        autoCapitalize="off"
        autoCorrect="off"
        className="form-control test-sourcegraph-url"
        id="sourcegraph-url"
        onChange={[Function]}
        spellCheck={false}
        type="text"
        value="https://sourcegraph.com"
      />
    </div>
  </form>
  <div
    className="options-menu__section"
  >
    <p>
      Learn more about privacy concerns, troubleshooting and extension features
       
      <a
        href="https://docs.sourcegraph.com/integration/browser_extension"
        target="blank"
      >
        here
      </a>
      .
    </p>
    <p>
      Search open source software at
       
      <a
        href="https://sourcegraph.com/search"
        target="blank"
      >
        sourcegraph.com/search
      </a>
      .
    </p>
  </div>
</div>
`;

exports[`OptionsMenu renders the current tab permissions alert 1`] = `
<div
  className="options-menu options-menu--full"
>
  <div
    className="options-header options-menu__section"
  >
    <div>
      <img
        className="options-header__logo"
        src="/img/sourcegraph-logo.svg"
      />
      <div
        className="options-header__version"
      >
        v
        0.0.0
      </div>
    </div>
    <div
      className="options-header__right"
    >
      <button
        className="options-header__settings btn btn-icon"
        onClick={[Function]}
        type="button"
      >
        <SettingsOutlineIcon
          className="icon-inline"
        />
      </button>
      <button
        aria-checked={true}
        className="toggle"
        onClick={[Function]}
        role="switch"
        title="Toggle to disable extension"
        type="button"
        value={1}
      >
        <span
          className="toggle__bar toggle__bar--on"
        />
        <span
          className="toggle__bar-shadow toggle__bar-shadow--on"
        />
        <span
          className="toggle__knob toggle__knob--on"
        />
      </button>
    </div>
  </div>
  <form
    className="server-url-form options-menu__section"
    onSubmit={[Function]}
  >
    <label
      htmlFor="sourcegraph-url"
    >
      Sourcegraph URL
    </label>
    <div
      className="input-group"
    >
      <div
        className="input-group-prepend"
      >
        <span
          className="input-group-text"
        >
          <span>
            <span
              className="server-url-form__status-indicator bg-success"
            />
             
            <span
              className="test-connection-status"
            >
              Connected
            </span>
          </span>
        </span>
      </div>
      <input
        autoCapitalize="off"
        autoCorrect="off"
        className="form-control test-sourcegraph-url"
        id="sourcegraph-url"
        onChange={[Function]}
        spellCheck={false}
        type="text"
        value="https://sourcegraph.com"
      />
    </div>
  </form>
  <div
    className="options-menu__section"
  >
    <div
      className="alert alert-info"
    >
      <p>
        The Sourcegraph browser extension adds hover tooltips to code views on code hosts such as GitHub, GitLab, Bitbucket Server and Phabricator.
      </p>
      <p>
        You must grant permissions to enable Sourcegraph on 
        <strong>
          gitlab.com
        </strong>
        .
      </p>
      <button
        className="btn btn-light request-permissions__test"
        onClick={[Function]}
        type="button"
      >
        Grant permissions
      </button>
    </div>
  </div>
  <div
    className="options-menu__section"
  >
    <p>
      Learn more about privacy concerns, troubleshooting and extension features
       
      <a
        href="https://docs.sourcegraph.com/integration/browser_extension"
        target="blank"
      >
        here
      </a>
      .
    </p>
    <p>
      Search open source software at
       
      <a
        href="https://sourcegraph.com/search"
        target="blank"
      >
        sourcegraph.com/search
      </a>
      .
    </p>
  </div>
</div>
`;

exports[`OptionsMenu renders the feature flags 1`] = `
<div
  className="options-menu options-menu--full"
>
  <div
    className="options-header options-menu__section"
  >
    <div>
      <img
        className="options-header__logo"
        src="/img/sourcegraph-logo.svg"
      />
      <div
        className="options-header__version"
      >
        v
        0.0.0
      </div>
    </div>
    <div
      className="options-header__right"
    >
      <button
        className="options-header__settings btn btn-icon"
        onClick={[Function]}
        type="button"
      >
        <SettingsOutlineIcon
          className="icon-inline"
        />
      </button>
      <button
        aria-checked={true}
        className="toggle"
        onClick={[Function]}
        role="switch"
        title="Toggle to disable extension"
        type="button"
        value={1}
      >
        <span
          className="toggle__bar toggle__bar--on"
        />
        <span
          className="toggle__bar-shadow toggle__bar-shadow--on"
        />
        <span
          className="toggle__knob toggle__knob--on"
        />
      </button>
    </div>
  </div>
  <form
    className="server-url-form options-menu__section"
    onSubmit={[Function]}
  >
    <label
      htmlFor="sourcegraph-url"
    >
      Sourcegraph URL
    </label>
    <div
      className="input-group"
    >
      <div
        className="input-group-prepend"
      >
        <span
          className="input-group-text"
        >
          <span>
            <span
              className="server-url-form__status-indicator bg-success"
            />
             
            <span
              className="test-connection-status"
            >
              Connected
            </span>
          </span>
        </span>
      </div>
      <input
        autoCapitalize="off"
        autoCorrect="off"
        className="form-control test-sourcegraph-url"
        id="sourcegraph-url"
        onChange={[Function]}
        spellCheck={false}
        type="text"
        value="https://sourcegraph.com"
      />
    </div>
  </form>
  <div
    className="options-menu__section"
  >
    <p>
      Learn more about privacy concerns, troubleshooting and extension features
       
      <a
        href="https://docs.sourcegraph.com/integration/browser_extension"
        target="blank"
      >
        here
      </a>
      .
    </p>
    <p>
      Search open source software at
       
      <a
        href="https://sourcegraph.com/search"
        target="blank"
      >
        sourcegraph.com/search
      </a>
      .
    </p>
  </div>
  <div
    className="options-menu__section"
  >
    <label>
      Configuration
    </label>
    <div>
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            className="form-check-input"
            id="foo"
            onChange={[Function]}
            type="checkbox"
          />
           
          Foo
        </label>
      </div>
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={false}
            className="form-check-input"
            id="bar"
            onChange={[Function]}
            type="checkbox"
          />
           
          Bar
        </label>
      </div>
    </div>
  </div>
</div>
`;
